--- a/index.css
+++ b/index.css
@@ -1,17 +1,17 @@
 @charset "uft-8";
 
 li {
-    color: #000000;
-    background: gray;
+    color: black;
+    background: aliceblue;
     font-size: 5em;
     }
 
 h2 {
-    background: skyblue;
+    background: deepskyblue;
 }
 
 p {
-    background-color:gray;
+    background-color: aliceblue;
     font-size: 5em;
 }
 
