--- a/index.css
+++ b/index.css
@@ -26,3 +26,12 @@ body {
 video {
     padding: 40px 15px;
 }
+
+.button {
+    display: inline;
+    margin: 0 16px 0 0;
+    border: 1px solid #666666;
+    padding: 4px;
+    border-radius: 4px;
+    background: linear-gradient(#FFFFFF,#888888);
+}
