--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 
 li {
     color: black;
-    
+    background: aliceblue;
     font-size: 20px;
     }
 
@@ -33,5 +33,5 @@ video {
     border: 1px solid #666666;
     padding: 4px;
     border-radius: 4px;
-    background: linear-gradient(#FFFFFF,#888888);
+    background: linear-gradient(rgba(255, 255, 255, 0.116),#888888);
 }
