--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ h2 {
     background: deepskyblue;
 }
 
+h3 {
+    background: darkseagreen;
+}
+
 p {
     background-color: aliceblue;
     font-size: 20px;
